--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   csv: ^5.0.0
   intl: ^0.17.0
   recase: ^4.0.0
+  fl_chart: ^0.36.1
+  ninja: ^3.0.2
 
 dev_dependencies:
   flutter_test:
